[gd_scene load_steps=7 format=3 uid="uid://caydoqsse7hcl"]

[ext_resource type="Theme" uid="uid://ddrog6ayej6vj" path="res://themes/ui_menu_theme.tres" id="1_acpwt"]
[ext_resource type="Script" uid="uid://d5xtokt4n6hr" path="res://scripts/end_day_menu.gd" id="1_rseyi"]
[ext_resource type="Script" uid="uid://78oeb2js20de" path="res://scripts/resources/individual_plant_parameters.gd" id="2_kr380"]
[ext_resource type="Resource" uid="uid://dk5rk1siaxw22" path="res://custom_resources/plants/lilium/lilium_individual_parameters.tres" id="3_acpwt"]
[ext_resource type="Resource" uid="uid://dblegp03hmnjg" path="res://custom_resources/plants/viola/viola_individual_parameters.tres" id="4_ip147"]
[ext_resource type="Resource" uid="uid://b13v2fwij8qx5" path="res://custom_resources/plants/phaleonopsis/phaleonopsis_individual_parameters.tres" id="5_b0ge0"]

[node name="EndDayMenu" type="Control"]
process_mode = 2
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_acpwt")
script = ExtResource("1_rseyi")
advice_text_bad = "Это меньше  необходимой 
сегодняшней суммы, но вы можете 
отбить ее в следующие дни."
advice_text_good = "Вы достигли необходимой 
сегодняшней суммы."
plant_textures = Dictionary[String, ExtResource("2_kr380")]({
"lilium": ExtResource("3_acpwt"),
"phaleonopsis": ExtResource("5_b0ge0"),
"viola": ExtResource("4_ip147")
})

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 12.0
offset_right = 226.0
offset_bottom = 160.0

[node name="Results" type="Control" parent="Panel"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_left = -90.0
offset_top = -12.0
offset_right = -90.0
offset_bottom = -12.0

[node name="Introduction" type="Label" parent="Panel/Results"]
layout_mode = 0
offset_left = 117.0
offset_top = 30.0
offset_right = 203.0
offset_bottom = 45.0
text = "За день вы заработали!"
horizontal_alignment = 1

[node name="Sum" type="Label" parent="Panel/Results"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 137.0
offset_top = 48.0
offset_right = 177.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 25
text = "5"
horizontal_alignment = 1

[node name="Advice" type="Label" parent="Panel/Results"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 94.0
offset_top = 79.0
offset_right = 225.0
offset_bottom = 114.0
text = "Это меньше  необходимой 
сегодняшней суммы, но вы можете 
отбить ее в следующие дни."
horizontal_alignment = 1

[node name="StartOver" type="Button" parent="Panel/Results"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = 121.0
offset_top = 103.0
offset_right = 194.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 8
text = "Начать сначала"

[node name="NextDay" type="Button" parent="Panel/Results"]
layout_mode = 0
offset_left = 106.0
offset_top = 122.0
offset_right = 209.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 7
text = "начать следующий день"

[node name="NewPlant" type="Control" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/NewPlant"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -41.0
offset_right = 52.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/NewPlant/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/NewPlant/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Вам пришло новое растение!"
horizontal_alignment = 1

[node name="PlantTitle" type="Label" parent="Panel/NewPlant/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Алое"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/NewPlant/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -10
theme_override_constants/margin_bottom = 10

[node name="PlantTexture" type="TextureRect" parent="Panel/NewPlant/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AcceptPlant" type="Button" parent="Panel/NewPlant/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Получить"

[connection signal="pressed" from="Panel/Results/StartOver" to="." method="_on_start_over_pressed"]
[connection signal="pressed" from="Panel/Results/NextDay" to="." method="_on_next_day_pressed"]
[connection signal="pressed" from="Panel/NewPlant/MarginContainer/HBoxContainer/AcceptPlant" to="." method="_on_accept_plant_pressed"]
